--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 beautifulsoup4==4.11.1
 fuzzywuzzy==0.18.0
 mysql_connector_repackaged==0.3.1
+mysql-connector-python==8.0.30
 numpy==1.22.4
 pandas==1.4.3
 price_parser==0.3.4
